--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "values.js": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
