--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fullcalendar/interaction": "^6.0.1",
     "@fullcalendar/react": "^6.0.1",
     "@fullcalendar/timegrid": "^6.0.1",
+    "@iconify/react": "^4.0.1",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.11.1",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/styles": "^5.11.1",
@@ -31,6 +33,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.6.1",
     "sort-by": "^1.2.0",
