--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "values.js": "^2.1.1",
+    "yup": "^0.32.11",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
