--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "kalend": "^0.17.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
