--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.6.1",
+    "react-social-icons": "^5.15.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "values.js": "^2.1.1",
