--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
@@ -27,6 +28,7 @@
     "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "kalend": "^0.17.5",
