--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
     "react-social-icons": "^5.15.0",
     "sort-by": "^1.2.0",
@@ -51,6 +53,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
