--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mui/material": "^5.11.1",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/styles": "^5.11.1",
-    "@tanstack/react-query": "^4.20.4",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@tanstack/react-query": "4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
